--- a/articles/azure-cache-for-redis/index.yml
+++ b/articles/azure-cache-for-redis/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: yegu-ms
   ms.author: yegu
   ms.date: 12/16/2019
-  ms.openlocfilehash: cbf495563a6d3a9000778d8980a506b6726fb658
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 2655c1a5b3a99422a71a2acc18671d9fdd31baa5
+  ms.sourcegitcommit: 3bdeb546890a740384a8ef383cf915e84bd7e91e
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88006011"
+  ms.lasthandoff: 10/30/2020
+  ms.locfileid: "93099999"
 landingContent:
 - title: Azure Cache for Redis について
   linkLists:
@@ -24,22 +24,22 @@ landingContent:
       url: cache-overview.md
   - linkListType: video
     links:
-    - text: 管理オプション
-      url: https://azure.microsoft.com/resources/videos/azure-redis-cache-administration-options/
-    - text: セキュリティ キャッシュ
-      url: https://azure.microsoft.com/resources/videos/azure-redis-security-cacheing/
     - text: ベスト プラクティス
       url: https://azure.microsoft.com/resources/videos/azure-redis-cache-best-practices/
     - text: パフォーマンスの向上
       url: https://azure.microsoft.com/resources/videos/increase-performance-through-redis-cluster-in-azure-redis-cache/
+    - text: セキュリティ キャッシュ
+      url: https://azure.microsoft.com/resources/videos/azure-redis-security-cacheing/
+    - text: 管理オプション
+      url: https://azure.microsoft.com/resources/videos/azure-redis-cache-administration-options/
   - linkListType: whats-new
     links:
-    - text: よく寄せられる質問
-      url: cache-faq.md
+    - text: Enterprise レベルのキャッシュを作成する
+      url: quickstart-create-redis-enterprise.md
     - text: Azure Cache for Redis のベスト プラクティス
       url: cache-best-practices.md
-    - text: Azure Cache for Redis の ASP.NET セッション状態プロバイダー
-      url: cache-aspnet-session-state-provider.md
+    - text: よく寄せられる質問
+      url: cache-faq.md
 - title: クイック スタート:Azure Cache for Redis
   linkLists:
   - linkListType: quickstart
@@ -58,8 +58,12 @@ landingContent:
       url: cache-python-get-started.md
   - linkListType: tutorial
     links:
-    - text: ASP.NET でキャッシュ アサイド スコアボードを作成する
-      url: cache-web-app-cache-aside-leaderboard.md
+    - text: セッション状態プロバイダーの使用
+      url: cache-aspnet-session-state-provider.md
+    - text: 出力キャッシュ プロバイダーの使用
+      url: cache-aspnet-output-cache-provider.md
+    - text: Spring Boot Initializer の使用
+      url: /azure/developer/java/spring-framework/configure-spring-boot-initializer-java-app-with-redis-cache
   - linkListType: get-started
     links:
     - text: サンプル
