--- a/articles/azure-resource-manager/management/toc.yml
+++ b/articles/azure-resource-manager/management/toc.yml
@@ -22,6 +22,8 @@
       href: resources-without-resource-group-limit.md
     - name: セキュリティ
       items:
+        - name: セキュリティ ベースライン
+          href: ./security-baseline.md
         - name: Azure Policy によるセキュリティ制御
           displayName: 'regulatory, compliance, standards, domains'
           href: ./security-controls-policy.md
