--- a/articles/ddos-protection/TOC.yml
+++ b/articles/ddos-protection/TOC.yml
@@ -62,6 +62,8 @@
       href: 'https://docs.microsoft.com/azure/azure-resource-manager/management/overview'
 - name: リソース
   items:
+    - name: よく寄せられる質問
+      href: ddos-faq.md
     - name: 価格
       href: 'https://azure.microsoft.com/en-us/pricing/details/ddos-protection/'
     - name: リージョン別の提供状況
