--- a/articles/governance/policy/breadcrumb/toc.yml
+++ b/articles/governance/policy/breadcrumb/toc.yml
@@ -18,3 +18,9 @@
         - name: ポリシー
           tocHref: /azure/aks
           topicHref: /azure/governance/policy
+        - name: ポリシー
+          tocHref: /azure/storage
+          topicHref: /azure/governance/policy
+        - name: ポリシー
+          tocHref: /azure/web-application-firewall
+          topicHref: /azure/governance/policy
