--- a/articles/marketplace/index.yml
+++ b/articles/marketplace/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: keferna
   ms.author: keferna
   ms.date: 09/02/2020
-  ms.openlocfilehash: ce57fb7da524feb4d58231e2ba8bf96ccb28a1c3
-  ms.sourcegitcommit: b6f3ccaadf2f7eba4254a402e954adf430a90003
+  ms.openlocfilehash: 01ab8b0e27e8f1b9bfc326330214bcdb118dd6bd
+  ms.sourcegitcommit: 857859267e0820d0c555f5438dc415fc861d9a6b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/20/2020
-  ms.locfileid: "92281775"
+  ms.lasthandoff: 10/30/2020
+  ms.locfileid: "93127282"
 landingContent:
 - title: コマーシャル マーケットプレースでの作業
   linkLists:
@@ -50,7 +50,7 @@ landingContent:
     - text: 共同販売のパートナー エンゲージメント
       url: ./marketplace-co-sell.md
     - text: Microsoft AppSource と Office 内でソリューションを使用できるようにする
-      url: https://docs.microsoft.com/office/dev/store/submit-to-appsource-via-partner-center
+      url: /office/dev/store/submit-to-appsource-via-partner-center
     - text: Azure Marketplace と AppSource コミュニティ フォーラムに参加する
       url: https://www.microsoftpartnercommunity.com/t5/Microsoft-AppSource-and-Azure/bd-p/2222
     - text: ウェビナーに参加して話を聞くため、または後からオンデマンドで視聴するために登録を行う
@@ -90,7 +90,7 @@ landingContent:
     - text: Dynamics 365 for Operations のオファー
       url: ./partner-center-portal/create-new-operations-offer.md
     - text: その他の種類のオファー
-      url: ./cloud-partner-portal/cpp-marketplace-offers.md
+      url: ./publisher-guide-by-offer-type.md
 - title: 支払いの受け取り
   linkLists:
   - linkListType: concept
@@ -104,7 +104,7 @@ landingContent:
     - text: 税の詳細
       url: /partner-center/tax-details-marketplace?context=/azure/marketplace/context/context
     - text: コマーシャル マーケットプレースの課金
-      url: ./partner-center-portal/billing-details.md
+      url: ./marketplace-commercial-transaction-capabilities-and-considerations.md
 - title: API リファレンス
   linkLists:
   - linkListType: reference
