--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -559,6 +559,7 @@
           href: howto-add-branding-in-azure-ad-apps.md
         - name: パブリッシャー ドメインの構成
           href: howto-configure-publisher-domain.md
+          displayName: 'verified domain, verified publisher domain'
         - name: サービス使用条件とプライバシーに関する声明の構成
           href: howto-add-terms-of-service-privacy-statement.md
         - name: アプリの発行者の確認を構成する
