--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -39,8 +39,6 @@
       href: spring-cloud-tutorial-custom-domain.md
     - name: terraform を使用して Azure Spring Cloud インスタンスをプロビジョニングする
       href: spring-cloud-tutorial-provision-azure-spring-cloud-instance-terraform.md
-    - name: Jenkins での CI/CD
-      href: /azure/developer/jenkins/deploy-to-azure-spring-cloud-using-azure-cli
     - name: マネージド ID を使用して Key Vault を Azure Spring Cloud アプリに接続する
       href: spring-cloud-tutorial-managed-identities-key-vault.md
     - name: 仮想ネットワークに Azure Spring Cloud をデプロイする
@@ -65,53 +63,72 @@
       href: disaster-recovery.md
 - name: 操作方法ガイド
   items:
-    - name: アプリをデプロイ用に準備する
-      href: spring-cloud-tutorial-prepare-app-deployment.md
-    - name: ソース コードから Java アプリを起動する
-      href: spring-cloud-howto-launch-from-source.md
-    - name: 構成サーバーを設定する
-      href: spring-cloud-tutorial-config-server.md
-    - name: サービス登録を有効にする
-      href: spring-cloud-service-registration.md
-    - name: アプリを Azure CosmosDB にバインドする
-      href: spring-cloud-tutorial-bind-cosmos.md
-    - name: アプリを Azure Cache for Redis にバインドする
-      href: spring-cloud-tutorial-bind-redis.md
-    - name: アプリを Azure MySQL にバインドする
-      href: spring-cloud-tutorial-bind-mysql.md
-    - name: アプリの開始、停止、および削除
-      href: spring-cloud-howto-start-stop-delete.md
-    - name: ステージング環境のセットアップ
-      href: spring-cloud-howto-staging-environment.md
-    - name: 永続的ストレージを使用する
-      href: spring-cloud-howto-persistent-storage.md
-    - name: Azure 負荷分散ソリューションと統合する
-      href: spring-cloud-howto-integrate-azure-load-balancers.md
-    - name: システム割り当てマネージド ID を有効化する
-      href: spring-cloud-howto-enable-system-assigned-managed-identity.md
-    - name: 問題の自己診断と解決
-      href: spring-cloud-howto-self-diagnose-solve.md
+    - name: 開発
+      items:
+        - name: Java Spring アプリをデプロイ用に準備する
+          href: spring-cloud-tutorial-prepare-app-deployment.md
+        - name: 構成サーバーを設定する
+          href: spring-cloud-tutorial-config-server.md
+        - name: サービス登録を有効にする
+          href: spring-cloud-service-registration.md
+    - name: 配置
+      items:
+        - name: ステージング環境のセットアップ
+          href: spring-cloud-howto-staging-environment.md
+        - name: ソース コードから Java アプリを起動する
+          href: spring-cloud-howto-launch-from-source.md
+    - name: 構成
+      items:
+        - name: アプリの開始、停止、および削除
+          href: spring-cloud-howto-start-stop-delete.md
+        - name: 永続的ストレージを使用する
+          href: spring-cloud-howto-persistent-storage.md
     - name: モニター
-    - name: ロールとアクセス許可を作成する
-      href: spring-cloud-howto-permissions.md
-    - name: 分散トレースと App Insights
-      href: spring-cloud-tutorial-distributed-tracing.md
-    - name: ログとメトリックの分析
-      href: diagnostic-services.md
-    - name: リアルタイムでのログのストリーミング
-      href: spring-cloud-howto-log-streaming.md
-- name: DevOps の展開
-  items:
-    - name: Azure DevOps を使用した CI/CD
-      href: spring-cloud-howto-cicd.md
-    - name: GitHub Actions を使用した CI/CD
-      href: spring-cloud-howto-github-actions.md
-    - name: GitHub Actions での Key Vault を使用した認証
-      href: spring-cloud-github-actions-key-vault.md
-- name: トラブルシューティング
-  items:
-    - name: トラブルシューティング ガイド
-      href: spring-cloud-troubleshoot.md
+      items:
+        - name: 分散トレースと App Insights
+          href: spring-cloud-tutorial-distributed-tracing.md
+        - name: ログとメトリックの分析
+          href: diagnostic-services.md
+        - name: リアルタイムでのログのストリーミング
+          href: spring-cloud-howto-log-streaming.md
+    - name: セキュリティで保護
+      items:
+        - name: システム割り当てマネージド ID を有効化する
+          href: spring-cloud-howto-enable-system-assigned-managed-identity.md
+        - name: ロールとアクセス許可を作成する
+          href: spring-cloud-howto-permissions.md
+    - name: 統合
+      items:
+        - name: アプリを Azure CosmosDB にバインドする
+          href: spring-cloud-tutorial-bind-cosmos.md
+        - name: アプリを Azure Cache for Redis にバインドする
+          href: spring-cloud-tutorial-bind-redis.md
+        - name: アプリを Azure MySQL にバインドする
+          href: spring-cloud-tutorial-bind-mysql.md
+        - name: Azure 負荷分散ソリューションと統合する
+          href: spring-cloud-howto-integrate-azure-load-balancers.md
+    - name: 自動化
+      items:
+        - name: Azure DevOps を使用した CI/CD
+          href: spring-cloud-howto-cicd.md
+        - name: GitHub Actions を使用した CI/CD
+          href: spring-cloud-howto-github-actions.md
+        - name: GitHub Actions での Key Vault を使用した認証
+          href: spring-cloud-github-actions-key-vault.md
+    - name: トラブルシューティング
+      items:
+        - name: 問題の自己診断と解決
+          href: spring-cloud-howto-self-diagnose-solve.md
+        - name: トラブルシューティング ガイド
+          href: spring-cloud-troubleshoot.md
+    - name: Migrate
+      items:
+        - name: Spring Cloud
+          href: 'https://docs.microsoft.com/azure/developer/java/migration/migrate-spring-cloud-to-azure-spring-cloud'
+        - name: Spring Boot
+          href: 'https://docs.microsoft.com/azure/developer/java/migration/migrate-spring-boot-to-azure-spring-cloud'
+        - name: Tomcat
+          href: 'https://docs.microsoft.com/azure/developer/java/migration/migrate-tomcat-to-azure-spring-cloud'
 - name: リファレンス
   items:
     - name: Azure CLI プラグイン
