--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -224,7 +224,7 @@
           href: ../event-hubs/process-data-azure-stream-analytics.md
           maintainContext: true
         - name: Azure SQL Database の処理
-          href: ../sql-database/sql-database-stream-analytics.md
+          href: ../azure-sql/database/stream-data-stream-analytics-integration.md
           maintainContext: true
         - name: 地理空間のシナリオ
           href: geospatial-scenarios.md
@@ -686,7 +686,7 @@
     - name: フィードバック フォーラム
       href: 'https://feedback.azure.com/forums/270577-azure-stream-analytics'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-stream-analytics.html'
+      href: /answers/topics/azure-stream-analytics.html
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/stream-analytics/'
     - name: 料金計算ツール
