--- a/articles/virtual-machines/workloads/oracle/toc.yml
+++ b/articles/virtual-machines/workloads/oracle/toc.yml
@@ -6,6 +6,8 @@
       href: oracle-vm-solutions.md
     - name: Azure Virtual Machines で Oracle WebLogic Server を実行するためのソリューションとは
       href: oracle-weblogic.md
+    - name: Azure Kubernetes Service で Oracle WebLogic Server を実行するためのソリューションとは
+      href: weblogic-aks.md
     - name: OCI を使用したソリューション
       href: oracle-oci-overview.md
 - name: クイックスタート
