--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -14,6 +14,7 @@
     - name: VM トラフィック フィルターに関する問題を診断する - Azure CLI
       href: diagnose-vm-network-traffic-filtering-problem-cli.md
     - name: ARM テンプレートを使用して NSG フロー ログを構成する
+      displayName: Resource Manager
       href: quickstart-configure-network-security-group-flow-logs-from-arm-template.md
 - name: チュートリアル
   items:
