commit translated contents

--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -9,6 +9,8 @@
       href: entitlement-management-overview.md
     - name: アクセス レビューとは
       href: access-reviews-overview.md
+    - name: ID ライフサイクル管理とは
+      href: what-is-identity-lifecycle-management.md
 - name: チュートリアル
   expanded: true
   items:
@@ -23,6 +25,16 @@
           href: entitlement-management-delegate.md
         - name: 要求のプロセスとメール
           href: entitlement-management-process.md
+    - name: ID ライフサイクル管理
+      items:
+        - name: プロビジョニングとは
+          href: what-is-provisioning.md
+        - name: 人事主導のプロビジョニングとは
+          href: what-is-hr-driven-provisioning.md
+        - name: アプリのプロビジョニングとは
+          href: what-is-app-provisioning.md
+        - name: ディレクトリ間のプロビジョニングとは
+          href: what-is-inter-directory-provisioning.md
     - name: アクセス レビュー
       items:
         - name: レビューを使用したゲスト アクセスの管理
