--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -142,7 +142,7 @@
           href: upgrade-cluster.md
         - name: アップタイム SLA を使用する
           href: uptime-sla.md
-        - name: 近接配置グループの使用 (プレビュー)
+        - name: 近接通信配置グループを使用する
           href: reduce-latency-ppg.md
         - name: ノード イメージのアップグレード
           href: node-image-upgrade.md
@@ -166,7 +166,7 @@
           items:
             - name: 複数のノード プールを使用する
               href: use-multiple-node-pools.md
-            - name: スポット ノード プールの使用 (プレビュー)
+            - name: スポット ノード プールを使用する
               href: spot-node-pool.md
             - name: システム ノード プールの使用
               href: use-system-pools.md
