--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -6,6 +6,8 @@
     - name: Content Moderator とは
       href: overview.md
       expanded: true
+    - name: 新機能
+      href: whats-new.md
 - name: クイックスタート
   items:
     - name: Web 上で Content Moderator を試す
