--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -106,7 +106,7 @@
       items:
         - name: システム トピックの概要
           href: system-topics.md
-        - name: イベント ソース
+        - name: イベント ソース (発行元)
           items:
             - name: Azure App Configuration
               href: event-schema-app-configuration.md
@@ -138,13 +138,15 @@
               href: event-schema-azure-signalr.md
             - name: Azure サブスクリプション
               href: event-schema-subscriptions.md
-    - name: パートナー トピック
+    - name: パートナー イベント
       items:
-        - name: パートナー トピックの概要
-          href: partner-topics-overview.md
-        - name: Auth0
-          href: auth0-overview.md
-        - name: Event Grid パートナーになる
+        - name: パートナー イベントの概要
+          href: partner-events-overview.md
+        - name: イベント ソース (発行元)
+          items:
+            - name: Auth0
+              href: auth0-overview.md
+        - name: パートナーのオンボードの概要
           href: partner-onboarding-overview.md
     - name: イベント ドメイン
       href: event-domains.md
@@ -210,12 +212,16 @@
           href: create-view-manage-system-topics-cli.md
         - name: Azure Resource Manager テンプレート
           href: create-view-manage-system-topics-arm.md
+    - name: パートナー イベント
+      items:
+        - name: パートナーとしてオンボードする
+          href: onboard-partner.md
+        - name: Auth0 イベントをサブスクライブする
+          href: auth0-how-to.md
     - name: トピックまたはドメインのアクセス キーを取得する
       href: get-access-keys.md
     - name: カスタム トピックへの投稿
       href: post-to-custom-topic.md
-    - name: Auth0 イベントをサブスクライブする
-      href: auth0-how-to.md
     - name: HTTP エンドポイントでのイベントの受信
       href: receive-events.md
     - name: 配信不能な場所の設定と再試行ポリシー
