--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -113,6 +113,8 @@
       href: ../../virtual-network/public-ip-security-baseline.md
     - name: Azure Resource Graph のセキュリティ ベースライン
       href: ../../governance/resource-graph/concepts/azure-security-benchmark-baseline.md
+    - name: Azure Resource Manager のセキュリティ ベースライン
+      href: ../../azure-resource-manager/management/security-baseline.md
     - name: Azure Sentinel のセキュリティ ベースライン
       href: ../../sentinel/security-baseline.md
     - name: Azure SQL Database のセキュリティ ベースライン
