--- a/articles/virtual-machines/workloads/redhat/toc.yml
+++ b/articles/virtual-machines/workloads/redhat/toc.yml
@@ -1,15 +1,17 @@
 - name: 概要
   href: overview.md
-- name: Red Hat クイックスタート
-  items: null
-- name: クイックスタート - CentOS の WildFly
-  href: wildfly-on-centos.md
 - name: Red Hat Enterprise Linux イメージ
   items:
-    - name: Red Hat Enterprise Linux イメージの概要
+    - name: RHEL イメージの概要
       href: redhat-images.md
-    - name: Red Hat Enterprise Linux イメージの一覧
+    - name: RHEL イメージ リスト
       href: redhat-imagelist.md
+- name: Red Hat Java クイックスタート
+  items:
+    - name: VM/VMSS での JBoss EAP と RHEL
+      href: jboss-eap-on-rhel.md
+    - name: VM での WildFly と CentOS
+      href: wildfly-on-centos.md
 - name: Azure の Red Hat Update Infrastructure
   href: redhat-rhui.md
 - name: Red Hat Enterprise Linux BYOS イメージ プラン
