--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -135,12 +135,12 @@
                   href: iot-hub-devguide-messages-read-custom.md
                 - name: メッセージ ルートにクエリを追加する
                   href: iot-hub-devguide-routing-query-syntax.md
-            - name: IoT Hub イベントに対応する
-              href: iot-hub-event-grid.md
             - name: cloud-to-device メッセージを IoT Hub から送信する
               href: iot-hub-devguide-messages-c2d.md
             - name: 通信プロトコルを選択する
               href: iot-hub-devguide-protocols.md
+        - name: Event Grid を使用して IoT Hub のイベントに対応する
+          href: iot-hub-event-grid.md
         - name: デバイスからファイルをアップロードする
           href: iot-hub-devguide-file-upload.md
         - name: デバイス ID を管理する
@@ -171,7 +171,7 @@
           href: iot-hub-amqp-support.md
         - name: 用語集
           href: iot-hub-devguide-glossary.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -224,8 +224,6 @@
           href: iot-hub-devguide-no-sdk.md
         - name: ハブ ルートからの Avro データのクエリ
           href: iot-hub-query-avro-data.md
-        - name: Event Grid からのデバイス接続状態イベントの順序付け
-          href: iot-hub-how-to-order-connection-state-events.md
         - name: C2D メッセージの送信
           items:
             - name: .NET
@@ -343,6 +341,8 @@
           href: iot-hub-distributed-tracing.md
         - name: IoT Hub サービスとリソースの正常性
           href: iot-hub-azure-service-health-integration.md
+        - name: Event Grid からのデバイス接続状態イベントの順序付け
+          href: iot-hub-how-to-order-connection-state-events.md
     - name: 実在のデバイスの使用
       items:
         - name: オンライン シミュレーターの使用
