--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -368,7 +368,7 @@
                     - name: .NET
                       href: storage-blob-user-delegation-sas-create-dotnet.md
                 - name: サービス SAS を作成する
-                  href: storage-blob-service-sas-create-dotnet.md
+                  href: sas-service-create.md
                 - name: アカウント SAS の作成 (.NET)
                   href: ../common/storage-account-sas-create-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 保存されているアクセス ポリシーの定義
@@ -761,7 +761,7 @@
           items:
             - name: AzCopy
               items:
-                - name: はじめに
+                - name: 作業開始
                   href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Data Lake Storage の使用
                   href: ../common/storage-use-azcopy-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
