commit translated contents

--- a/articles/machine-learning/classic/index.yml
+++ b/articles/machine-learning/classic/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: j-martens
   ms.author: jmartens
   ms.date: 03/05/2020
-  ms.openlocfilehash: e31651c07cc9567af0deac8311b2321ad6dee4ba
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 6bd43c0aff79003cc998dc132a13ba4c52281ff3
+  ms.sourcegitcommit: 96918333d87f4029d4d6af7ac44635c833abb3da
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91337506"
+  ms.lasthandoff: 11/04/2020
+  ms.locfileid: "93309807"
 landingContent:
 - title: Studio (クラシック) を使ってみる
   linkLists:
@@ -36,9 +36,9 @@ landingContent:
     - text: PowerShell モジュール
       url: powershell-module.md
     - text: アルゴリズムとモジュール
-      url: https://docs.microsoft.com/azure/machine-learning/studio-module-reference/index
+      url: /azure/machine-learning/studio-module-reference/index
     - text: REST 管理 API
-      url: https://docs.microsoft.com/rest/api/machinelearning/
+      url: /rest/api/machinelearning/
     - text: Web サービスのエラー コード
       url: web-service-error-codes.md
 - title: その他の Azure ML テクノロジ
@@ -46,8 +46,8 @@ landingContent:
   - linkListType: reference
     links:
     - text: Azure Machine Learning
-      url: /azure/machine-learning/
+      url: ../index.yml
     - text: データ サイエンス仮想マシン
-      url: /azure/machine-learning/data-science-virtual-machine
+      url: ../data-science-virtual-machine/index.yml
     - text: Microsoft の ML 製品の比較
-      url: https://docs.microsoft.com/azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/studio/context/ml-context
+      url: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure%252fmachine-learning%252fstudio%252fcontext%252fml-context
